--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html{
+    box-sizing: border-box;
+}
+a {
+    /* cursor: pointer; */
+}
